--- a/css/styles.css
+++ b/css/styles.css
@@ -550,8 +550,8 @@ div.header{
    
     .form-box{
         background-color: #6d2d2d;
-        padding: 2rem ;
-        margin: 1rem;
+        padding: 2rem .5rem;
+        margin:0 -1rem -1rem;
         text-align: center;
     }
 
@@ -562,7 +562,7 @@ div.header{
 
     a.request-btn{
       
-        font-size: 16px;
+        font-size: 14px;
         font-weight: 800;
       
         margin:  0;
